--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,16 @@ repository = "https://github.com/sopium/webview2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winapi = { version = "0.3.8", features = ["combaseapi", "libloaderapi"] }
+winapi = { version = "0.3.8", features = [
+    "combaseapi",
+    "libloaderapi",
+    # For SHCreateMemStream.
+    "shellapi",
+] }
 widestring = "0.4.0"
 com = "0.2.0"
 memory-module-sys = "0.3.0"
+once_cell = "1.3.1"
 
 [dev-dependencies]
 winit = "0.20.0"
