--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webview2"
-version = "0.1.0-alpha.2"
+version = "0.1.0-alpha.3"
 authors = ["Yin Guanhao <sopium@mysterious.site>"]
 edition = "2018"
 license = "MIT"
@@ -8,6 +8,10 @@ description = "Rust bindings for WebView2"
 repository = "https://github.com/sopium/webview2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[features]
+default = ["memory-load-library"]
+memory-load-library = ["memory-module-sys"]
 
 [dependencies]
 winapi = { version = "0.3.8", features = [
@@ -18,12 +22,15 @@ winapi = { version = "0.3.8", features = [
 ] }
 widestring = "0.4.0"
 com = "0.2.0"
-memory-module-sys = "0.3.0"
+memory-module-sys = { version = "0.3.0", optional = true }
 once_cell = "1.3.1"
 
 [dev-dependencies]
 winit = "0.20.0"
 
 [package.metadata.docs.rs]
-default-target = "x86_64-pc-windows-gnu"
-targets = ["x86_64-pc-windows-gnu"]
+default-target = "x86_64-pc-windows-msvc"
+targets = ["x86_64-pc-windows-msvc"]
+# Docs.rs cannot build `memory-module-sys` because it does not have a C cross
+# comipler for windows.
+no-default-features = true
