Split low level bindings to webview2-sys

--- a/webview2-sys/idl2rs/Cargo.toml
+++ b/webview2-sys/idl2rs/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Yin Guanhao <sopium@mysterious.site>"]
 edition = "2018"
 
+[workspace]
+
 [dependencies]
 pest = "2.1.3"
 pest_derive = "2.1.0"
