--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webview2"
-version = "0.1.0-alpha.3"
+version = "0.1.0-alpha.4"
 authors = ["Yin Guanhao <sopium@mysterious.site>"]
 edition = "2018"
 license = "MIT"
@@ -8,6 +8,9 @@ description = "Rust bindings for WebView2"
 repository = "https://github.com/sopium/webview2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[workspace]
+members = [".", "webview2-sys"]
 
 [features]
 default = ["memory-load-library"]
@@ -24,6 +27,7 @@ widestring = "0.4.0"
 com = "0.2.0"
 memory-module-sys = { version = "0.3.0", optional = true }
 once_cell = "1.3.1"
+webview2-sys = { path = "./webview2-sys", version = "0.1.0-alpha.4" }
 
 [dev-dependencies]
 winit = "0.20.0"
