--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ winapi = { version = "0.3.8", features = [
     "libloaderapi",
     # For SHCreateMemStream.
     "shellapi",
+    "winerror"
 ] }
 widestring = "0.4.0"
 com = "0.2.0"
