Update CI to use rust 1.44

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,7 @@ jobs:
     strategy:
       matrix:
         version:
-          # Uncomment when stable > 1.43
-          # - stable
+          - stable
           - 1.43.0
         arch:
           - x86_64
@@ -82,7 +81,7 @@ jobs:
         with:
           profile: minimal
           # Use fixed version because format result can change between different rust versions.
-          toolchain: 1.43.0
+          toolchain: 1.44.0
           override: true
       - run: rustup component add rustfmt
       - uses: actions-rs/cargo@v1
@@ -99,7 +98,7 @@ jobs:
         with:
           profile: minimal
           # Use fixed version because clippy warnings can change between rust versions.
-          toolchain: 1.43.0
+          toolchain: 1.44.0
           override: true
       - run: rustup component add clippy
       - uses: actions-rs/cargo@v1
@@ -121,7 +120,7 @@ jobs:
         with:
           profile: minimal
           # Use fixed version because format result can change between different rust versions.
-          toolchain: 1.43.0
+          toolchain: 1.44.0
           override: true
       - run: rustup component add rustfmt
       - run: cargo run < ../../Microsoft.Web.WebView2.0.9.488/WebView2.idl > ../src/lib.rs && rustfmt ../src/lib.rs
