--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,21 +12,18 @@ repository = "https://github.com/sopium/webview2"
 [workspace]
 members = [".", "webview2-sys"]
 
-[features]
-default = ["memory-load-library"]
-memory-load-library = ["memory-module-sys"]
-
 [dependencies]
 winapi = { version = "0.3.8", features = [
     "combaseapi",
     "libloaderapi",
     # For SHCreateMemStream.
     "shellapi",
-    "winerror"
+    "winerror",
+    # WebView2LoaderStatic.lib needs to link to some functions from version..lib.
+    "winver"
 ] }
 widestring = "0.4.0"
 com = "0.2.0"
-memory-module-sys = { version = "0.3.0", optional = true }
 once_cell = "1.3.1"
 webview2-sys = { path = "./webview2-sys", version = "0.1.0-alpha.8" }
 
@@ -36,6 +33,3 @@ winit = "0.20.0"
 [package.metadata.docs.rs]
 default-target = "x86_64-pc-windows-msvc"
 targets = ["x86_64-pc-windows-msvc"]
-# Docs.rs cannot build `memory-module-sys` because it does not have a C cross
-# comipler for windows.
-no-default-features = true
