--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,21 @@ jobs:
       # Copy the DLL if using gnu toolchain.
       - run: |
           mkdir -p target/debug/deps &&
-          cp Microsoft.Web.WebView2.*/build/native/${{ fromJson('{ "x86_64": "x64", "i686": "x86" }')[matrix.arch] }}/WebView2Loader.dll target/debug/deps
+          cp webview2-sys/Microsoft.Web.WebView2.*/build/native/${{ fromJson('{ "x86_64": "x64", "i686": "x86" }')[matrix.arch] }}/WebView2Loader.dll target/debug/deps &&
+          mkdir -p webview2-sys/target/debug/deps &&
+          cp webview2-sys/Microsoft.Web.WebView2.*/build/native/${{ fromJson('{ "x86_64": "x64", "i686": "x86" }')[matrix.arch] }}/WebView2Loader.dll webview2-sys/target/debug/deps
         if: ${{ matrix.env == 'gnu' }}
       - uses: actions-rs/cargo@v1
         with:
           command: test
+      # Test webview2-sys alone. This is to make sure that we are not missing
+      # any features of winapi necessary for linking in webview2-sys.
+      #
+      # Just run cargo because actions-rs/cargo does not support working-directory.
+      - run: |
+          echo '[workspace]' >> Cargo.toml &&
+          cargo test --tests
+        working-directory: webview2-sys
 
   test-minimal-versions:
     name: Test (Minimal versions)
@@ -51,7 +61,7 @@ jobs:
       # Copy the DLL if using gnu toolchain.
       - run: |
           mkdir -p target/debug/deps &&
-          cp Microsoft.Web.WebView2.*/build/native/x86/WebView2Loader.dll target/debug/deps
+          cp webview2-sys/Microsoft.Web.WebView2.*/build/native/x86/WebView2Loader.dll target/debug/deps
         if: ${{ endsWith(matrix.toolchain, 'gnu') }}
       - uses: actions-rs/cargo@v1
         with:
@@ -125,8 +135,8 @@ jobs:
           toolchain: 1.46.0
           override: true
       - run: rustup component add rustfmt
-      - run: cargo run < ../../Microsoft.Web.WebView2.*/WebView2.idl > ../src/lib.rs && rustfmt ../src/lib.rs
+      - run: cargo run < ../Microsoft.Web.WebView2.*/WebView2.idl > ../src/lib.rs && rustfmt ../src/lib.rs
         working-directory: webview2-sys/idl2rs
-      - run: cargo run -- interface_wrappers < ../../Microsoft.Web.WebView2.*/WebView2.idl > ../../src/interfaces.rs && rustfmt ../../src/interfaces.rs
+      - run: cargo run -- interface_wrappers < ../Microsoft.Web.WebView2.*/WebView2.idl > ../../src/interfaces.rs && rustfmt ../../src/interfaces.rs
         working-directory: webview2-sys/idl2rs
       - run: git diff --exit-code
