--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ webview2-sys = { path = "./webview2-sys", version = "0.1.0-beta.1" }
 [dev-dependencies]
 winit = "0.20.0"
 native-windows-gui = { version = "1.0.4", features = ["high-dpi"] }
+winapi = { version = "0.3.9", features = [
+    "libloaderapi",
+] }
 
 [package.metadata.docs.rs]
 default-target = "x86_64-pc-windows-msvc"
